--- a/src/app/components/landingPage/landingPage.component.html
+++ b/src/app/components/landingPage/landingPage.component.html
@@ -3,7 +3,7 @@
   <span>Landing Page</span><br/>
   <small>Public zone of application</small>
 </h1>
-<p>Here not been control application user session</p>
+<p>Here not controlled application user session</p>
 
 
 <button class="link-button" routerLink="/private" >Go to Private zone </button>
