--- a/src/app/components/privateZone/privateZone.component.html
+++ b/src/app/components/privateZone/privateZone.component.html
@@ -1,6 +1,10 @@
-<h1>
-  <span>User Private zone!</span><br/>
-  <small>Private zone of Application</small>
-</h1>
-<p>Here is where we initialize the control to application user session</p>
-<button routerLink="/public">Log out session</button>
+<div sessionHandlerControl >
+
+  <h1>
+    <span>User Private zone!</span><br/>
+    <small>Private zone of Application</small>
+  </h1>
+  <p>Here is where we initialize the control to application user session</p>
+  <button routerLink="/public">Log out session</button>
+
+</div>
